maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:55: error: ')' expected but ';' found.
  a = processNeighborForExit(x, y, LEFT, a._1, a._2;
                                                   ^